[package]
name = "seven_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dioxus = { version = "0.3" }
dioxus-desktop = { version = "0.3" }
time = "0.3.20"
tokio = { version = "1.18.1", features = ["full"] }
